# pivis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
_buildocs/: build.sh  clean.sh  conf.py
docs/: .buildinfo  build.sh  conf.py  index.html  pivis.html  py-modindex.html  search.js  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pivis.doctree
docs/built/: .buildinfo  genindex.html  modules.html  objects.inv  pivis.html  search.html
docs/built/.doctrees/: environment.pickle  index.doctree  modules.doctree  pivis.doctree
docs/source/: index.rst  modules.rst
examples/: 5 Minute Demo file (1).xlsx  example.py  example_supervised.py  preliminary.py  runner.py
examples/output/: main.csv
src/: example.py
src/pivis/: __init__.py  aoi.py  track.py
src/pivis_mascottpy/: aoi.py  track.py
