[build-system]
requires = [
    "setuptools",
    "pandas >= 2.2.2",
    "matplotlib == 3.8.4",
    "scipy >= 1.12.0",
    "openpyxl >= 3.1.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "pivis_mascottpy"
version = "0.0.1"
authors = [
  { name="Mahlon Scott", email="mascottpy@gmail.com" },
]
description = "Visualization for spreadsheets created by Eye Tracking software"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"